tests/compile-fail/bitflags_pub_const.stderr
error: no rules expected keyword `pub`
 --> tests/compile-fail/bitflags_pub_const.rs:5:9
  |
5 |         pub const FLAG_A = 0b00000001;
  |         ^^^ no rules expected this token in macro call
  |
note: while trying to match `}`
 --> src/lib.rs
  |
  |         }
  |         ^
